Fix sticky banner extra movement from body's extra margin-top

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
 }
 
 * {
-    outline: 1px solid red;
+    /* outline: 1px solid red; */
     /* margin: 0;
     padding: 0; */
 }
@@ -15,6 +15,7 @@ body{
     background-color: rgb(82, 82, 82);
     font-family: verdana, sans-serif;
     color: white;
+    margin-top: 0px;
 }
 
 button {
@@ -34,6 +35,7 @@ button:hover{
     top: 0%;
     display: inline-block;
     background-color: rgb(82, 82, 82);
+    padding-top: 5px;
 }
 
 .home,
